навбары, вход и регистрация перевод сделан

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -10,6 +10,14 @@ index_jsp.checkbox.Remember_me = Remember me
 index_jsp.button.Cancel = Cancel
 index_jsp.href.sign_up = Sign Up
 
+sign_up_jsp.label.fill_inform = Please fill in the registration form
+sign_up_jsp.button.sign_up = Sign up
+sign_up_jsp.choose_a_role = Choose a role
+sign_up_jsp.merchandiser = merchandiser
+sign_up_jsp.st_cashier = elder cashier
+sign_up_jsp.cashier = cashier
+
+
 navbar_jsp.href.Log_out = Log Out
 navbar_jsp.href.Sign_Up = Sign Up
 navbar_jsp.href.Info = Info
@@ -24,6 +32,8 @@ st_cashier_navbar_jsp.href.All_Reports = All Reports
 st_cashier_navbar_jsp.href.Info = Info
 st_cashier_navbar_jsp.href.Change_Language = Change Language
 st_cashier_navbar_jsp.label.Cash_register_at_your_service= Cash register at your service
+
+merchandiser_navbar_jsp.href.Add_new_Product = Add new product
 
 st_cashier_jsp.label.st_cashier_successfully_logged_in! = Elder cashier successfully logged in!
 st_cashier_jsp.placeholder.Search_product_by_name.. = Search product by name..
