перевел все страницы связаные со старшим кассиром(70% сделано)

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -2,6 +2,8 @@ button_Return = Return
 button_Add = Add
 button_Save = Save
 button_Delete = Delete
+button_See_more = See more
+button_Actions = Actions
 
 Success! = Success!
 Error! = Error! 
@@ -11,6 +13,9 @@ Message.The_product_has_been_deleted! = The product has been deleted!
 Message.Oops1=  Oops,something went wrong... Check your input
 Message.product_not_added = The new product has not been added. Perhaps a product with that name already exists!
 Message.product_not_changed = The new product has not been changed
+Message.product_deleted_from_receipt = The product has been deleted from receipt!
+Message.receipt_deleted = The receipt has been deleted!
+Message.Cannot_generate_report =Cannot generate report at this time. Perhaps the report for today has already been created. Please try again later...
 
 index_jsp.button.Login1 = Login
 index_jsp.label.Username = Username
@@ -53,6 +58,7 @@ st_cashier_jsp.label.idreceipt = receipt id
 st_cashier_jsp.label.cashier_name = cashier name
 st_cashier_jsp.label.closing_time = closing time
 st_cashier_jsp.label.total_sum = total sum
+st_cashier_jsp.label.Receipt_Id = Receipt id
 
 merchandiser_jsp.title_Merchandiser = Merchandiser
 merchandiser_jsp.label_merchandiser_successfully_logged_in = merchandiser successfully logged in!
@@ -62,5 +68,23 @@ merchandiser_jsp.table.quantity = Quantity
 merchandiser_jsp.table.weight = Weight
 merchandiser_jsp.table.tonnage = Tonnage
 merchandiser_jsp.table.price = Price
+
+st_cashier_jsp.title_St_Cashier = Elder Cashier
+
+AllReports_jsp.label_All_Reports = All Reports:
+AllReports_jsp.table.Id_Report = Id Report
+AllReports_jsp.table.Quantity_of_receipts = Quantity of receipts
+AllReports_jsp.table.Last_receipt_id = Last receipt id
+AllReports_jsp.table.Time = Time of creation
+AllReports_jsp.table.Total_sum = Total sum
+
+report.label.Report = Report
+report.label.Current_time = Current time:
+report.label.Quantity_of_receipts = Quantity of receipts:
+report.label.Last_receipt_id = Last receipt id:
+report.label.Total_Sum = Total Sum:
+
+Xreport.label.X-report = X-report
+
 
 
