создал страницу Info о программе

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -98,3 +98,16 @@ Xreport.label.X-report = X-report
 cashier.label.cashier_successfully_logged_in = cashier successfully logged in!
 cashier.header.Cashier = Cashier
 
+Info.label = Information about the Cash Register program
+Info.author = Creator: Maxim Khimii
+Info.text = There are roles: cashier, elder cashier, merchandiser.
+Info.text0 =The merchandiser can create products and indicate their quantity in the warehouse.
+Info.text1 =The cashier has the ability to:
+Info.text2 = - create an order (receipt);
+Info.text3 =- add selected products by their code or product name to the order;
+Info.text4 =- specify/change the quantity of a certain product or weight;
+Info.text5 =- close the order (check).
+Info.text6 =The elder cashier has the ability to:
+Info.text7 =- cancel the check;
+Info.text8 =- cancel the goods in the receipt;
+Info.text9 =– make X and … reports.
