пофиксил проблему с регистрацией

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -40,7 +40,7 @@ sign_up_jsp.label.fill_inform = Please fill in the registration form
 sign_up_jsp.button.sign_up = Sign up
 sign_up_jsp.choose_a_role = Choose a role
 sign_up_jsp.merchandiser = merchandiser
-sign_up_jsp.st_cashier = elder cashier
+sign_up_jsp.st_cashier = st_cashier
 sign_up_jsp.cashier = cashier
 
 
